--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ header p {
 }
 
 .about-photo {
+    display: block;
+    margin: 0 auto;
     width: 150px;
     height: 150px;
     border-radius: 50%;
